--- a/USER/timer40ch.uvprojx
+++ b/USER/timer40ch.uvprojx
@@ -395,6 +395,11 @@
               <FileType>1</FileType>
               <FilePath>.\system_stm32f4xx.c</FilePath>
             </File>
+            <File>
+              <FileName>readme.txt</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\readme.txt</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
