Revise TASK_PROIO
1.New Task Proio:  start_task >> 100ms_task >> 100ms_task >> task1(touch cmd task) >> task2(gui_refresh task)
2.Pack wait_start_signal function
3.In "RESET MODE", Add task-suspend and task-resume function, if a "RESET CMD" is coming:
   ***Suspend timer and gui-flash task,
   ***Block to wait a New start signal,
   ***When detect a New start signal, Resume timer-task and GUI-flash-task

Signed-off-by: saffronrui <liuruiruijob@126.com>

--- a/USER/timer40ch.uvprojx
+++ b/USER/timer40ch.uvprojx
@@ -471,9 +471,9 @@
               <FilePath>..\FWLIB\STM32F4xx_StdPeriph_Driver\src\stm32f4xx_tim.c</FilePath>
             </File>
             <File>
-              <FileName>stm32f4xx_wwdg.c</FileName>
+              <FileName>stm32f4xx_iwdg.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\FWLIB\STM32F4xx_StdPeriph_Driver\src\stm32f4xx_wwdg.c</FilePath>
+              <FilePath>..\FWLIB\STM32F4xx_StdPeriph_Driver\src\stm32f4xx_iwdg.c</FilePath>
             </File>
           </Files>
         </Group>
